<resources>
    <string name="app_name">Soccer</string>
    <string name="title_activity_main">Overview</string>
    <string name="title_activity_main_offline">Overview (Offline)</string>
    <string name="title_activity_add_game_select_players">Select Players</string>
    <string name="title_activity_team_management">Team Division</string>
    <string name="title_activity_add_game_enter_data">Enter Data</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_edit_player_own">Edit Own Userdata</string>
    <string name="title_activity_edit_player_admin">Edit player</string>
    <string name="title_activity_add_player">Add player</string>
    <string name="title_activity_player_stats">Player Stats</string>
    <string name="title_activity_display_game">Show Game</string>
    <string name="title_activity_edit_game">Edit Game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_scoreboard">Scoreboard</string>
    <string name="Scoreboard_titles_wins">Scoreboard: Wins</string>
    <string name="Scoreboard_titles_defeats">Scoreboard: Defeats</string>
    <string name="Scoreboard_titles_goalsgot">Scoreboard: Goals Got</string>
    <string name="Scoreboard_titles_goalsshot">Scoreboard: Goals Shot</string>
    <string name="nav_settings_title">Settings</string>
    <string name="title_activity_score_board">Scoreboard</string>
    <string name="title_activity_site_notice">Site Notice</string>
    <string name="title_activity_qr_scanner">QR-Code Scanner</string>
    <string name="btnLogin">Login</string>
    <string name="btnContinue">Continue</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnShuffle">Shuffle</string>
    <string name="btnAdd">Add</string>
    <string name="btnBack">Back</string>
    <string name="mniMain">Main</string>
    <string name="mniTeam">Team(test)</string>
    <string name="mniGerman">Deutsch</string>
    <string name="mniEnglish">English</string>
    <string name="mniLogout">Logout</string>
    <string name="mniAdd">Add</string>
    <string name="mniEdit">Edit Userdata</string>
    <string name="mniDisplay">Overview</string>
    <string name="ctxMniEditPlayer">Edit</string>
    <string name="ctxMniDeletePlayer">Delete</string>
    <string name="ckbUpdatePassword">Update Password</string>
    <string name="ckbIsAdmin">Admin</string>
    <string name="preference_category_general_title">General</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_language_default" translatable="false">en</string>
    <string name="preference_language_summary">App Language</string>
    <string name="preference_category_webservice">Webservice</string>
    <string name="preference_webservice_ip_title">IP</string>
    <string name="preference_webservice_ip_summary">Webservice IP Address</string>
    <string name="preference_webservice_ip_default" translatable="false">192.168.192.1</string>
    <string name="preference_webservice_port_title">Port</string>
    <string name="preference_webservice_port_summary">Webservice Port</string>
    <string name="preference_webservice_port_default" translatable="false">25120</string>
    <string name="preference_general_usesnackbar">Use Snackbar</string>
    <string name="preference_category_user_title">User</string>
    <string name="preference_user_username_summary">Username</string>
    <string name="preference_user_username_title">Username</string>
    <string name="preference_user_password_summary">Password</string>
    <string name="preference_user_password_title">Password</string>
    <string name="preference_user_autologin">Autologin</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="PosMid">Midfield</string>
    <string name="PosGoal">Goalkeeper</string>
    <string name="PosDef">Defense</string>
    <string name="PosAtk">Attacker</string>
    <string name="Positions">Positions</string>
    <string name="GamesPlayed">Games Played</string>
    <string name="GamesWon">Victories</string>
    <string name="GamesLost">Defeats</string>
    <string name="GameDraws">Draws</string>
    <string name="AvgGoalDiff">Avg. Goal Difference</string>
    <string name="GoalsShotAll">Goals Shot</string>
    <string name="NumPosAttack">Played Attack</string>
    <string name="NumPosDefense">Played Defense</string>
    <string name="NumPosMidfield">Played Midfield</string>
    <string name="NumPosGoal">Played Goalkeeper</string>
    <string name="ShowPlayersOrGames">Show: </string>
    <string name="NoRemark">-</string>
    <string name="Remark">Remark</string>
    <string name="GoalsShotDefault">Goals Shot (Default)</string>
    <string name="GoalsShotHead">Goals Shot (Head)</string>
    <string name="GoalsShotHeadSnow">Goals Shot (Head+Snow)</string>
    <string name="GoalsShotPenalty">Goals Shot (Penalty)</string>
    <string name="GoalsGot">Goals Got</string>
    <string name="Nutmeg">Nutmeg</string>
    <string name="Date">Date</string>
    <string name="SelectPlayersForGame">Select Players for the Game</string>
    <string name="Participation">Participation</string>
    <string name="action_settings">Settings</string>
    <string name="position">Position</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="player">Player</string>
    <string name="game">Game</string>
    <string name="misc">Miscellaneous</string>
    <string name="players">Players</string>
    <string name="games">Games</string>
    <string name="wins">Wins</string>
    <string name="defeats">Defeats</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string-array name="language_entries">
        <item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string-array name="language_values">
        <item>de</item>
        <item>en</item>
        <item>es</item>
    </string-array>
    <string name="Error">Error</string>
    <string name="msg_SelectMinNumOfPlayers">At least %d players must be selected to play a game</string>
    <string name="msg_SavedGame">Saved game</string>
    <string name="msg_EnterNameUsernamePassword">Name, Username and Password may not be empty</string>
    <string name="msg_EnterNameUsername">Name and Username may not be empty</string>
    <string name="msg_PlayerAdded">Player \'%s\' added</string>
    <string name="msg_SelectMinNumOfPositions">At least one position must be selected</string>
    <string name="msg_UpdatedUserData">Successfully updated userdata</string>
    <string name="msg_CouldNotUpdateUserData">Could not update userdata</string>
    <string name="msg_EnterUsernamePassword">Please enter Username and Password</string>
    <string name="msg_UsernameOrPasswordInvalid">Username or Password invalid</string>
    <string name="msg_UsernameNotAvailable">Username \'%s\' already exists</string>
    <string name="msg_CouldNotSetPositions">Could not set positions</string>
    <string name="msg_CouldNotDeletePlayer">Could not delete player</string>
    <string name="msg_CannotDeleteOwnPlayer">Cannot delete own Player</string>
    <string name="msg_EnterPassword">Please enter a new password</string>
    <string name="msg_ConnectionTimeout">Connection to server timed out</string>
    <string name="msg_NetworkUnreachable">Cannot connect to server</string>
    <string name="msg_IllegalUsername">Username must only contain letters and numbers</string>
    <string name="msg_UsernameTooLong">Username must not be longer than %d characters</string>
    <string name="msg_NameTooLong">Name must not be longer than %d characters</string>
    <string name="msg_UsernameTooShort">Username must at least be %d characters long</string>
    <string name="msg_NameTooShort">Name must at least be %d characters long</string>
    <string name="msg_PasswordTooShort">Password must at least be %d characters long</string>
    <string name="msg_PlayerhasNoTeam">Every player must be assigned to a Team</string>
    <string name="msg_TeamHasNoGolaie">No Goalkeeper in: </string>
    <string name="msg_UnbalancedTeams">The player difference between the Teams is too high</string>
    <string name="msg_CouldNotDeleteGame">Could not delete game</string>
    <string name="msg_CouldNotRefreshData">Could not refresh data</string>
    <string name="msg_CannotConnectToWebservice">Connection to webservice failed</string>
    <string name="msg_InconsistentGoalData">Goals Shot must equal Goals Got of opposing team</string>
    <string name="msg_IllegalName">Name must only contain letters and numbers</string>
    <string name="msg_IllegalPassword">Password must only contain letters and numbers</string>
    <string name="msg_IllegalRemark">Remark must only contain letters and numbers</string>
    <string name="msg_TooManyGoalies">Only one Goalkeeper is allowed per team</string>
    <string name="msg_NoPlayersToAssign">No players to assign</string>
    <string name="msg_CannotAssignGoalie">Goalkeeper cannot be assigned</string>
    <string name="msg_TooManyGoalkeeperOnlyPlayers">There are more than 2 players who can only play as Goalkeeper</string>
    <string name="msg_CouldNotInsertGame">Could not insert game</string>
    <string name="msg_CouldNotInsertPlayer">Could not insert player</string>
    <string name="msg_CouldNotSetPassword">Could not set password</string>
    <string name="msg_CouldNotUpdateGame">Could not update game</string>
    <string name="msg_CouldNotUpdateStats">Could not update statistics</string>
    <string name="msg_ConfirmGameDeletion">Do you really want to delete this game ?</string>
    <string name="msg_ConfirmPlayerDeletion">Do you really want to delete player \'%s\' ?</string>
    <string name="msg_DataSavedLocally">Data saved locally</string>
    <string name="msg_CannotDeletePlayerInLocalGame">Cannot delete player who is participating in locally saved game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_dialogDeletePlayer">Delete player?</string>
    <string name="msg_dialogDeletePlayer">Are you sure you want to delete player \'%s\'?</string>
    <string name="btnPositive_dialogDeletePlayer">Yes</string>
    <string name="btnNegative_dialogDeletePlayer">No</string>
    <string name="PosMidAbbrev">M</string>
    <string name="PosGoalAbbrev">G</string>
    <string name="PosDefAbbrev">D</string>
    <string name="PosAtkAbbrev">A</string>
    <string name="PositionAbbrev">P</string>
    <string name="msg_DoubleBackPress">Press again to exit</string>
    <string name="title_activity_team_division2">TeamDivision2</string>
    <string name="preference_sitenotice_title">Site notice</string>
    <string name="preference_teamassignment_layout_title">Team Assignment Layout</string>
    <string name="preference_teamassignment_layout_summary">Select a Team Assignment Layout</string>
    <string name="preference_teamassignment_layout_positiveBtn">OK</string>
    <string name="preference_teamassignment_layout_negativeBtn">Cancel</string>
    <string name="nav_site_notice_title">Site Notice</string>
</resources>