<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_category_general_title">
        <ListPreference
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="preference_general_language"
            android:summary="@string/preference_language_summary"
            android:title="@string/preference_language_title"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_usesnackbar"
            android:title="@string/preference_general_usesnackbar"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_user_title">
        <EditTextPreference
            android:key="preference_user_username"
            android:summary="@string/preference_user_username_summary"
            android:title="@string/preference_user_username_title"
            android:inputType="text"/>
        <EditTextPreference
            android:key="preference_user_password"
            android:summary="@string/preference_user_password_summary"
            android:title="@string/preference_user_password_title"
            android:inputType="textPassword"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_user_autologin"
            android:title="@string/preference_user_autologin"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Design Color">
        <com.rarepebble.colorpicker.ColorPreference
            android:key="colorPicker"
            android:title="Change the look of the app"
            android:defaultValue="@color/standardRed"
            />
    </PreferenceCategory>
</PreferenceScreen>