<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuPlayer"
            android:title="@string/player">
            <menu>
                <item
                    android:id="@+id/mniDisplayPlayer"
                    android:icon="@drawable/ic_mosquito"
                    android:title="@string/mniDisplay" />
                <item
                    android:id="@+id/mniEditPlayer"
                    android:icon="@drawable/ic_edit"
                    android:title="@string/mniEdit" />
                <item
                    android:id="@+id/mniScoreboard"
                    android:icon="@drawable/ic_scoreboard"
                    android:title="@string/title_activity_scoreboard" />
                <item
                    android:id="@+id/mniAddPlayer"
                    android:icon="@drawable/ic_add"
                    android:title="@string/mniAdd" />
            </menu>
        </item>

        <item
            android:id="@+id/menuGame"
            android:title="@string/game">
            <menu>
                <item
                    android:id="@+id/mniDisplayGames"
                    android:icon="@drawable/ic_mosquito"
                    android:title="@string/mniDisplay" />
                <item
                    android:id="@+id/mniAddGame"
                    android:icon="@drawable/ic_add"
                    android:title="@string/mniAdd" />
            </menu>
        </item>

        <item
            android:id="@+id/menuMisc"
            android:title="@string/misc">
            <menu>
                <item
                    android:id="@+id/mniSettings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/title_activity_settings" />
                <item
                    android:id="@+id/mniLogout"
                    android:icon="@drawable/ic_mosquito"
                    android:title="@string/mniLogout" />
                <item
                    android:id="@+id/mniSiteNotice"
                    android:icon="@drawable/ic_sitenotice"
                    android:title="@string/nav_site_notice_title"/>
            </menu>
        </item>
    </group>
</menu>
