<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:text="@string/btnCancel"
        android:layout_toRightOf="@+id/ckbPosGoal"
        android:layout_toEndOf="@+id/ckbPosGoal"
        android:layout_alignBottom="@+id/btnSave" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:text="@string/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/ckbPosAtk"
        android:layout_toStartOf="@+id/ckbPosAtk" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ckbPosMid"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtUsername"
        android:layout_toRightOf="@+id/txvName"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txvUsername"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txvUsername"
        android:layout_toRightOf="@+id/txvUsername"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txvUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txvUsername"
        android:layout_below="@+id/txvUsername"
        android:padding="20dp"
        android:text="@string/Name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:text="@string/Username"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/ckbPosMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ckbPosAtk"
        android:layout_alignStart="@+id/ckbPosAtk"
        android:layout_below="@+id/txvName"
        android:layout_marginTop="59dp"
        android:text="@string/PosMid"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/ckbPosGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ckbPosMid"
        android:layout_alignStart="@+id/ckbPosMid"
        android:layout_below="@+id/ckbPosMid"
        android:text="@string/PosGoal"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/ckbPosDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ckbPosGoal"
        android:layout_alignStart="@+id/ckbPosGoal"
        android:layout_below="@+id/ckbPosGoal"
        android:text="@string/PosDef"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/ckbPosAtk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PosAtk"
        android:textSize="30sp"
        android:layout_below="@+id/ckbPosDef"
        android:layout_toRightOf="@+id/txvName"
        android:layout_toEndOf="@+id/txvName" />

</RelativeLayout>