<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <DatePicker
        android:id="@+id/datePicker"
        android:calendarViewShown="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/table_PlayersHeader"
        android:layout_alignEnd="@+id/table_PlayersHeader" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectPlayersForGame"
        android:textSize="24sp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/datePicker"
        android:layout_alignLeft="@+id/table_PlayersHeader"
        android:layout_alignStart="@+id/table_PlayersHeader" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:layout_marginTop="47dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/table_PlayersHeader">

        <TableRow>

            <TextView
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/Participation"
                android:textStyle="bold" />

            <TextView
                android:layout_width="250dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/Name"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/table_PlayersHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:id="@+id/table_Players"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="88dp"
        android:text="@string/Date"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:layout_below="@+id/table_PlayersHeader"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnContinue"
        android:layout_below="@+id/table_PlayersHeader"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="250dp"/>

</RelativeLayout>