<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/txvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/edtName"
        android:layout_toStartOf="@+id/edtName"
        android:padding="20dp"
        android:text="@string/Name"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txvName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txvName"
        android:ems="10"
        android:inputType="text"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txvName"
        android:layout_toLeftOf="@+id/edtName"
        android:layout_toStartOf="@+id/edtName"
        android:padding="20dp"
        android:text="@string/Username"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txvPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtName"
        android:layout_toEndOf="@+id/txvPassword"
        android:layout_toRightOf="@+id/txvPassword"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="17dp" />

    <CheckBox
        android:id="@+id/txvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtUsername"
        android:layout_below="@+id/txtUsername"
        android:padding="20dp"
        android:text="@string/ckbUpdatePassword"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txvPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtUsername"
        android:layout_toEndOf="@+id/txvPassword"
        android:layout_toRightOf="@+id/txvPassword"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPassword"
        android:textSize="17dp" />

    <CheckBox
        android:id="@+id/ckbIsAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckbIsAdmin"
        android:textSize="18sp"
        android:layout_below="@+id/edtPassword"
        android:layout_toRightOf="@+id/txvPassword"
        android:layout_toEndOf="@+id/txvPassword" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSave"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text="@string/btnCancel" />

    <Button
        android:id="@+id/btnSave"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ckbIsAdmin"
        android:layout_toEndOf="@+id/ckbIsAdmin" />

</RelativeLayout>