<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:text="@string/btnCancel"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        android:layout_alignBaseline="@+id/btnAdd"
        android:layout_alignBottom="@+id/btnAdd"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:text="@string/btnAdd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtUsername"
        android:layout_toEndOf="@+id/txtName"
        android:layout_toRightOf="@+id/txtName"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txvUsername"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txvUsername"
        android:layout_toRightOf="@+id/txvUsername"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/Name"
        android:textSize="18sp"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_alignEnd="@+id/txtPassword" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txvUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txvUsername"
        android:layout_below="@+id/txvUsername"
        android:padding="20dp"
        android:text="@string/Password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtPassword"
        android:layout_toEndOf="@+id/txtName"
        android:layout_toRightOf="@+id/txtName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/Username"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/ckbIsAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckbIsAdmin"
        android:textSize="18sp"
        android:layout_below="@+id/txtName"
        android:layout_toRightOf="@+id/txtName"
        android:layout_toEndOf="@+id/txtName" />

</RelativeLayout>